# jif

./: .gitignore  Cargo.toml  README.md  fuzz.sh  profile.json  profile.sh  rustfmt.toml
core/: Cargo.toml
core/src/: bitstream.rs  buffer.rs  decode.rs  gif_data_stream.rs  grammar.rs  lib.rs
demo/: server.go
fuzz/: Cargo.toml
regression/: id:000001,sig:06,src:000000,time:3982,execs:10562,op:colorization,pos:0  id:000002,sig:06,src:000000,time:3983,execs:10563,op:colorization,pos:0  id:000003,sig:06,src:000000,time:6693,execs:18237,op:colorization,pos:0
renderer/: Cargo.toml  README.md
src/: bitstream.rs  decode.rs  gif_data_stream.rs  grammar.rs  lib.rs  main.rs
tests/: decompress_canvas_empty_0  decompress_code_not_found_2  decompress_code_not_found_3  decompress_compute_clear_code_overflow_0  decompress_index_frame_oob_1  decompress_table_based_image_oob_0  decompress_table_based_image_oob_1  id:000001,sig:06,src:000065,time:31336,execs:73987,op:colorization,rep:8  id:000002,sig:06,src:000065,time:31337,execs:74006,op:colorization,rep:8  id:000003,sig:06,src:000065,time:31413,execs:77315,op:havoc,rep:3  id:000004,sig:06,src:000065,time:31475,execs:79825,op:havoc,rep:4  id:000005,sig:06,src:000065,time:31543,execs:82716,op:havoc,rep:4  id:000007,sig:06,src:000065,time:31706,execs:89405,op:havoc,rep:2  id:000008,sig:06,src:000065,time:31794,execs:92980,op:havoc,rep:2  id:000009,sig:06,src:000065,time:32085,execs:104721,op:havoc,rep:4  id:000010,sig:06,src:000065+000088,time:32321,execs:113583,op:splice,rep:6  parse_buffer_oob_0  parse_buffer_oob_3  (+15 more)
(+20 files in other folders)
